# auth_api

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
migrations/: env.py
migrations/versions/: 2023-08-15_initial.py  2023-08-22_add_oauth.py  2023-08-22_add_user_username.py
scripts/: start-dev.sh  start-prod.sh
src/: config.py  database.py  main.py  redis.py
src/auth/: config.py  router.py  schemas.py  users.py  utils.py
tests/: conftest.py
tests/auth/: test_routes.py
