[tool.poetry]
name = "auth_api"
version = "0.1.0"
description = ""
authors = ["TimofeyTst <yarik.mist@gmail.com>"]
readme = "README.md"
packages = [{include = "auth_api"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
pydantic = "^2.1.1"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentry-sdk = "^1.29.2"
fastapi-users = {extras = ["oauth", "redis", "sqlalchemy"], version = "^12.1.1"}
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.7"
asyncpg = "^0.28.0"
redis = "^4.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
async-asgi-testclient = "^1.4.11"
pytest-env = "^0.8.2"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
python-json-logger = "^2.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
